[tool.poetry]
name = "agencia"
version = "0.1.0"
description = ""
authors = ["yeiler22 <yeiler2209@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
psycopg = "^3.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
